--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+            
       - name: Installing NPM
+        working-directory: ./frontend
         run: npm install --force
 
       - name: Run Tests
+        working-directory: ./frontend
         run: npm run test
 
       - name: Building application
+        working-directory: ./frontend
         run: npm run build
 
       - name: Generate deployment package
