--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         working-directory: ./frontend
         run: npm install --force
 
+      - name: Link Angular CLI
+        run: npm link @angular/cli
+
       - name: Run Tests
         working-directory: ./frontend
         run: npm run test
