--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm install --force
 
       - name: Link Angular CLI
-        run: npm link @angular/cli && npm install --save-dev @angular-devkit/build-angular
+        run: npm link @angular/cli && npm install @angular-devkit/build-angular --force
 
       # - name: Run Tests
       #   working-directory: ./frontend
