--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Link Angular CLI
         run: npm link @angular/cli && npm install @angular-devkit/build-angular --force
 
+      - name: Install Karma
+        run: npm install karma grunt-karma --force
+
       - name: Run Tests
         working-directory: ./frontend
         run: npm run test
