--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm link @angular/cli && npm install @angular-devkit/build-angular --force
 
       - name: Install Karma
-        run: npm install karma grunt-karma --force
+        run: npm install karma grunt-karma karma-jasmine --force
 
       - name: Run Tests
         working-directory: ./frontend
