--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,12 +45,12 @@ jobs:
       - name: Link Angular CLI
         run: npm link @angular/cli && npm install @angular-devkit/build-angular --force
 
-      - name: Install Karma
-        run: npm install karma grunt-karma karma-jasmine karma-coverage karma-chrome-launcher karma-jasmine-html-reporter --force && npm i --save-dev @types/jest @types/node
+      # - name: Install Karma
+      #   run: npm install karma grunt-karma karma-jasmine karma-coverage karma-chrome-launcher karma-jasmine-html-reporter --force && npm i --save-dev @types/jest @types/node
 
-      - name: Run Tests
-        working-directory: ./frontend
-        run: npm run test
+      # - name: Run Tests
+      #   working-directory: ./frontend
+      #   run: npm run test
 
       - name: Building application
         working-directory: ./frontend
