--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,10 @@ jobs:
         run: npm install --force
 
       - name: Install Devkit
-        run: npm install @angular-devkit/build-angular --force
+        run: npm install karma karma-chrome-launcher karma-coverage karma-jasmine karma-jasmine-html-reporter --save-dev && npm install @angular-devkit/build-angular --force
 
-      - name: Install Jest
-        run: npm i --save-dev @types/jest @types/node
+      #- name: Install Jest
+      #  run: npm i --save-dev @types/jest @types/node
 
       - name: Run Tests
         working-directory: ./frontend
