--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,9 @@ jobs:
 
       - name: Install Devkit
         run: npm install @angular-devkit/build-angular --force && npm install karma karma-chrome-launcher karma-coverage karma-jasmine karma-jasmine-html-reporter @types/node --force
-      #- name: Install Jest
-      #  run: npm i --save-dev @types/jest @types/node
+      
+      - name: Install Jest
+        run: npm i @types/node --save-dev
 
       - name: Run Tests
         working-directory: ./frontend
