--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "typeRoots": ["node_modules/@types"],
+    "types" : ["jasmine", "node"],
+    "typeRoots": ["./node_modules/@types"],
     "lib": [
       "ES2022",
       "dom"
