--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,11 +52,11 @@ jobs:
 
       - name: Run Tests
         working-directory: ./frontend
-        run: npm run test
+        run: export NODE_ENV=test && npm run test
 
       - name: Building application
         working-directory: ./frontend
-        run: npm run build
+        run: export NODE_ENV=production && npm run build
 
       - name: Generate deployment package
         run: zip -r deploy.zip * .[^.]* -x "**node_modules**"
