--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [20]
+        node: [18]
     env:
       NODE_ENV: "production"
 
@@ -50,9 +50,9 @@ jobs:
       - name: Install Node Types
         run: npm i @types/node --save-dev
 
-      #- name: Run Tests
-      #  working-directory: ./frontend
-      #  run: export NODE_ENV=test && npm run test
+      - name: Run Tests
+       working-directory: ./frontend
+       run: export NODE_ENV=test && npm run test
 
       - name: Building application
         working-directory: ./frontend
