--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,9 @@ jobs:
       - name: Install Node Types
         run: npm i @types/node --save-dev
 
-      #- name: Run Tests
-      #  working-directory: ./frontend
-      #  run: export NODE_ENV=test && npm run test
+      - name: Run Tests
+        working-directory: ./frontend
+        run: export NODE_ENV=test && npm run test
 
       - name: Building application
         working-directory: ./frontend
