--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,17 +44,14 @@ jobs:
         run: npm install --force
 
       - name: Install Devkit
-        run: npm install @angular-devkit/build-angular --force
-        run: npm install karma karma-chrome-launcher karma-coverage karma-jasmine karma-jasmine-html-reporter @types/node --force
+        run: npm install @angular-devkit/build-angular --force && npm install karma karma-chrome-launcher karma-coverage karma-jasmine karma-jasmine-html-reporter @types/node --force
       
       - name: Install Node Types
-        run: npm i @types/node --save-dev --force
-        run: npm link @angular/cli --force
+        run: npm i @types/node --save-dev --force && npm link @angular/cli --force
 
       - name: Run Tests
         working-directory: ./frontend
-        run: npm ci --force
-        run: export NODE_ENV=test && npm run test
+        run: export NODE_ENV=test && npm ci --force && npm run test
 
       - name: Building application
         working-directory: ./frontend
