--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Run Tests
         working-directory: ./frontend
-        run: export NODE_ENV=test && npm ci --force && npm run test
+        run: export NODE_ENV=test && npm run test
 
       - name: Clear Test Cache
         run: npm cache clear --force && npm cache verify
